fix collapsing nav on resize; added placeholder options

--- a/css/taylor.css
+++ b/css/taylor.css
@@ -1,40 +1,53 @@
 .taylor-editor ul.nav.navbar-nav button {
-  width: 30px;
-  height: 30px;
-  margin: 0px 10px 0 10px;
-  padding: 6px 8px;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.428571429;
-  text-align: center;
-  display: inline-block;
-  white-space: nowrap;
-  cursor: pointer;
-  background-image: none;
-  vertical-align: middle;
-  border-radius: 4px;
-  border: none;
-  outline: none;
-  background: none !important;
-  background-color: none !important;
-  background-image: none !important;
-  box-shadow: none;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+    width: 30px;
+    height: 30px;
+    margin: 0px 10px 0 10px;
+    padding: 6px 8px;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.428571429;
+    text-align: center;
+    display: inline-block;
+    white-space: nowrap;
+    cursor: pointer;
+    background-image: none;
+    vertical-align: middle;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    background: none !important;
+    background-color: none !important;
+    background-image: none !important;
+    box-shadow: none;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
+
 .taylor-editor ul.nav.navbar-nav button:hover {
-  background-color: rgba(0, 0, 0, 0.1) !important;
+    background-color: rgba(0, 0, 0, 0.1) !important;
 }
+
 .taylor-editor ul.nav.navbar-nav button:active {
-  background-color: rgba(0, 0, 0, 0.4) !important;
+    background-color: rgba(0, 0, 0, 0.4) !important;
 }
+
 .taylor-editable, .taylor-textarea {
-  width: 100%;
-  height: 100%;
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
 }
+
 .taylor-body {
-  overflow-x: hidden;
-  overflow-y: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+[contenteditable=true]:empty:before {
+    content: attr(placeholder);
+    display: block; /* For Firefox */
+}
+
+.taylor-editor .navbar-nav > li {
+    float: left !important;
 }
